# msckf_vio_noros

./: .gitignore  CMakeLists.txt  README.md  premake5.lua
msckf_vio/core/: cam_state.h  feature.hpp  image_processor.cpp  image_processor.h  imu_state.h  math_utils.hpp  msckf_vio.cpp  msckf_vio.h
msckf_vio/entry/: main.cpp
msckf_vio/entry/config/: camchain-imucam-euroc.yaml
msckf_vio/include/msckf_vio/: msckf.h  params.h  types.h
msckf_vio/system/: msckf.cpp  params.cpp
msckf_vio/util/: buddy_memory.h  time_debugger.h
scripts/: cmake_configure.bat  premake_clear.bat  premake_config.bat
third_libraries/OpenCV/: download.txt
